# MACER

./: .gitignore  CMakeLists.txt  README.md  compile.bat
config/: config.json  private.json.sample  public.json
include/nlohmann/: json.hpp
src/core/class/: config.cc  config.h  logger.cc  logger.h
src/core/platform/: mumu.cc  mumu.h  system.cc  system.h
src/core/utility/: config.h  logger.cc  logger.h  mumu.h  system.h  visual.cc  visual.h
src/main/: global.h  macer.cc
src/module/: login.cc  module.h
